Placeholder people images and masthead for homepage

--- a/templates/home.html
+++ b/templates/home.html
@@ -6,6 +6,12 @@
       <script src="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.6/semantic.min.js"></script>
    </head>
    <body>
-      Hello World
+      <div class="ui inverted vertical masthead center aligned segment">
+         <div class="ui text container">
+            <h1 class="ui inverted header">
+               People CRUD
+            </h1>
+         </div>
+      </div>
    </body>
 </html>
