Initial UI layout with Semantic Cards and tiled background

--- a/templates/home.html
+++ b/templates/home.html
@@ -3,6 +3,7 @@
    <head>
       <title>Person CRUD</title>
       <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.6/semantic.min.css">
+      <link rel="stylesheet" href="/static/main.css">
       <script src="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.6/semantic.min.js"></script>
    </head>
    <body>
@@ -13,5 +14,29 @@
             </h1>
          </div>
       </div>
+
+      <div class="ui inverted grey segment">
+         <div class="ui centered cards">
+            <div class="card">
+               <div class="image">
+                  <img src="/static/images/daniel.jpg">
+               </div>
+               <div class="content">
+                  <div class="header">Karl Hopkinson-Turrell</div>
+                  <div class="description">Karl is on holiday!</div>
+               </div>
+            </div>
+            <div class="card">
+               <div class="image">
+                  <img src="/static/images/jenny.jpg">
+               </div>
+               <div class="content">
+                  <div class="header">Jenny</div>
+                  <div class="description">Jenny is also on holiday!</div>
+               </div>
+            </div>
+         </div>
+      </div>
+
    </body>
 </html>
