--- a/templates/home.html
+++ b/templates/home.html
@@ -6,7 +6,9 @@
       <link rel="stylesheet" href="/static/main.css">
       <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js"></script>
       <script src="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.1.6/semantic.min.js"></script>
-      <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0-beta.1/angular.min.js"></script>
+      <script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.0-beta.1/angular.js"></script>
+      <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore.js"></script>
+      <script src="//cdnjs.cloudflare.com/ajax/libs/restangular/1.5.1/restangular.js"></script>
       <script src="/static/js/app.js"></script>
    </head>
    <body ng-controller="PeopleController as pc">
